@@ -27,7 +27,9 @@
  */
 package org.hisp.dhis.analytics.dimension.mappers;
 
-import static org.hisp.dhis.analytics.dimension.DimensionMapperTestSupport.*;
+import static org.hisp.dhis.analytics.dimension.DimensionMapperTestSupport.asserter;
+
+import java.util.List;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.hisp.dhis.common.BaseDimensionalObject;
@@ -36,11 +38,8 @@ import org.hisp.dhis.webapi.dimension.DimensionResponse;
 import org.hisp.dhis.webapi.dimension.mappers.BaseDimensionalObjectMapper;
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableList;
-
 class BaseDimensionalObjectMapperTest
 {
-
     private static final DimensionType DIMENSION_TYPE = DimensionType.PERIOD;
 
     @Test
@@ -48,7 +47,7 @@ class BaseDimensionalObjectMapperTest
     {
         asserter( new BaseDimensionalObjectMapper(),
             BaseDimensionalObject::new,
-            ImmutableList.of( b -> b.setDimensionType( DIMENSION_TYPE ) ),
-            ImmutableList.of( Pair.of( DimensionResponse::getDimensionType, DIMENSION_TYPE ) ) );
+            List.of( b -> b.setDimensionType( DIMENSION_TYPE ) ),
+            List.of( Pair.of( DimensionResponse::getDimensionType, DIMENSION_TYPE ) ) );
     }
 }
